--- a/composer.json
+++ b/composer.json
@@ -4,17 +4,25 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.2.*"
-	},
+		"laravel/framework": "4.2.*",
+        "laracasts/flash": "~1.0",
+        "laracasts/commander": "~1.0",
+        "mitch/laravel-doctrine": "0.*"
+    },
+    "require-dev": {
+        "phpspec/phpspec": "~2.0"
+    },
 	"autoload": {
 		"classmap": [
 			"app/commands",
 			"app/controllers",
-			"app/models",
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
-		]
+		],
+        "psr-4": {
+            "Iceflow\\": "src/"
+        }
 	},
 	"scripts": {
 		"post-install-cmd": [
@@ -32,5 +40,5 @@
 	"config": {
 		"preferred-install": "dist"
 	},
-	"minimum-stability": "stable"
+	"minimum-stability": "dev"
 }
